--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <title>Document</title>
 </head>
 <body>
+
+    <h1>Vanilla JavaScript Clock by Luis Manuel Vivas</h1>
     <div class="clock">
-        <div class="hand hour"></div>
-        <div class="hand minute"></div>
-        <div class="hand second"></div>
+        <div class="hand hour" data-hour-hand></div>
+        <div class="hand minute" data-minute-hand></div>
+        <div class="hand second" data-second-hand></div>
 
         <div class="number number1">1</div>
         <div class="number number2">2</div>
@@ -27,5 +29,7 @@
         <div class="number number11">11</div>
         <div class="number number12">12</div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
